--- a/content/exercise_00-python_basics.ipynb
+++ b/content/exercise_00-python_basics.ipynb
@@ -60,14 +60,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Read the image at this address and store the result in a variable: https://upload.wikimedia.org/wikipedia/commons/thumb/1/1a/Elephant_Diversity.jpg/1920px-Elephant_Diversity.jpg"
+    "8. Read the image under \"images/elephant.jpg\" and store the result in a variable called ```img```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "9. Import the ```import matplotlib.pyplot as plt``` and display the image you just imported"
+    "9. Import the visualization and plotting package `matplotlib` with the line ```import matplotlib.pyplot as plt``` and display the image you just loaded"
    ]
   },
   {
