Update materials to avoid tifffile

--- a/content/exercise_00-python_basics.ipynb
+++ b/content/exercise_00-python_basics.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "7. Import the ```scikit-image.io``` module"
+    "7. Import the ```skimage.io``` module"
    ]
   },
   {
