--- a/content/exercise_01_image_handling_basics.ipynb
+++ b/content/exercise_01_image_handling_basics.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Using the skimage import function, load the image saved under \"images/cells_Actin.tif\"\n",
+    "2. Using the skimage import function, load the image saved under \"images/cells_Actin.png\"\n",
     "and put it in a variable called image"
    ]
   },
