--- a/content/exercise_01_image_handling_basics_solution.ipynb
+++ b/content/exercise_01_image_handling_basics_solution.ipynb
@@ -28,17 +28,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Using the skimage import function, load the image saved under \"images/cells_Actin.tif\"\n",
+    "2. Using the skimage import function, load the image saved under \"images/cells_Actin.png\"\n",
     "and put it in a variable called image"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "img = skimage.io.imread(\"images/cells_Actin.tif\")"
+    "img = skimage.io.imread(\"images/cells_Actin.png\")"
    ]
   },
   {
